[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Playpen_Sans/static/PlaypenSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/main_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/Playpen_Sans/static/PlaypenSans-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Playpen_Sans/static/PlaypenSans-Medium.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -128.0
margin_top = -88.0
margin_right = 1112.0
margin_bottom = 664.0
rect_scale = Vector2( 1.1111, 1 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 420.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Rhythm Game 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionNumber" type="Label" parent="CanvasLayer"]
margin_left = 328.0
margin_top = 32.0
margin_right = 375.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 7 )
text = "v1.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 72.0
margin_right = 416.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Created by RedSatura"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickMasf" type="Label" parent="CanvasLayer"]
margin_left = 328.0
margin_top = 192.0
margin_right = 612.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
text = "Please Pick a .masf file!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
margin_left = 296.0
margin_top = 144.0
margin_right = 800.0
margin_bottom = 424.0
window_title = "Open a File"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/Users/gianbryanmariel/Desktop/RedSatura's files/godot stuff/Magenta Rhythm Game"
current_path = "/Users/gianbryanmariel/Desktop/RedSatura's files/godot stuff/Magenta Rhythm Game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFileDialog" type="Button" parent="CanvasLayer"]
margin_left = 192.0
margin_top = 248.0
margin_right = 752.0
margin_bottom = 368.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
text = "Click to Show Popup!"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsefulKeys" type="Label" parent="CanvasLayer"]
margin_left = 744.0
margin_top = 64.0
margin_right = 1016.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 5 )
text = "Useful Keys:
D - Red hitspot
F - Yellow hitspot
J - Green hitspot
K - Blue hitspot

Escape - Back to Main Menu
Backspace - Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notice1" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 376.0
margin_right = 520.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 4 )
text = "To make sure songs don't break, please place the songs into the songs folder in the project's data folder."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notice2" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 440.0
margin_right = 432.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 6 )
text = "C: > Users > [username] > AppData > Roaming > Godot > projects > Magenta Rhythm Game"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="CanvasLayer"]
margin_left = 744.0
margin_top = 336.0
margin_right = 896.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 9 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoModeButton" type="CheckBox" parent="CanvasLayer"]
margin_left = 744.0
margin_top = 360.0
margin_right = 929.0
margin_bottom = 408.0
focus_mode = 0
custom_fonts/font = SubResource( 8 )
text = "Auto Mode"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="CanvasLayer"]
margin_left = 696.0
margin_top = 512.0
margin_right = 1017.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 10 )
text = "Credits:
Tambourine and Tom Drum Sound Effect from Pixabay"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_selected" from="CanvasLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/ShowFileDialog" to="." method="_on_ShowFileDialog_pressed"]
[connection signal="pressed" from="CanvasLayer/AutoModeButton" to="." method="_on_AutoModeButton_pressed"]
